--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -16,23 +16,23 @@
 
 <body>
     <header class="header">
-        <div class="logo-box">
-            <img src="img/logo-white.png" alt="logo" class="logo">
+        <div class="header__logo-box">
+            <img src="img/logo-white.png" alt="logo" class="header__logo">
         </div>
         
-        <div class="text-box">
+        <div class="header__text-box">
             <h1 class="heading-primary">
                 <!-- We use h1 to capture BOTH title and description because it is better
                  for SEO -->
-                 <span class="heading-primary-main">
+                 <span class="heading-primary--main">
                     Outdoors
                  </span>
-                 <span class="heading-primary-sub">
+                 <span class="heading-primary--sub">
                     is where life happens
                  </span>
             </h1>
 
-            <a href="#" class="btn btn-white btn-animated">
+            <a href="#" class="btn btn--white btn--animated">
                 Discover our tours
             </a>
         </div>
