--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -37,6 +37,29 @@
         </div>
     </header>
 
+    <main>
+        <section class="section-about">
+            <div class="u-center-text u-margin-bottom-8">
+                <h2 class="heading-secondary">
+                    Exiting tours for adventurous people
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-1-of-2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="col-1-of-2">
+                    image
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!--
     <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
@@ -104,6 +127,7 @@
             </div>
         </div>
     </section>
+    -->
 </body>
 
 </html>
