--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -39,7 +39,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exiting tours for adventurous people
                 </h2>
@@ -47,10 +47,26 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        You're going to fall in love with nature
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                        Beatae natus reprehenderit autem ducimus molestias repellat amet et,
+                        placeat, commodi nostrum inventore consequuntur doloribus,
+                        eius recusandae! Sapiente officiis repellat nihil labore?
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-small">
+                        Live adventures like you never have before 
+                    </h3>
+                    <p class="paragraph">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Beatae natus reprehenderit autem ducimus molestias repellat amet et,
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
+                    <!-- &rarr; creates a right pointing arrow using HTML -->
+                    
                 </div>
                 <div class="col-1-of-2">
                     image
