Create one feature box

--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -84,7 +84,7 @@
                 <div class="col-1-of-4">
                     <div class="feature-box">
                         <i class="icon-basic-world"></i>
-                        <h3 class="heading-tertiary">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
                             Explore the world
                         </h3>
 
